--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 
 .top-nav
 {
+    width: 100%;
     display: flex;
     background-color:white;
     overflow: hidden;
@@ -86,6 +87,28 @@
     background-color: lightgrey;
     cursor: pointer;
 }
+.drop-down-menu
+{
+    display: none;
+    text-decoration: none;
+}
+.drop-down-menu a
+{
+    text-decoration: none;
+    color: black;
+    margin: 10px;
+}
+.drop-down-menu a:hover
+{
+    text-decoration: none;
+    color: turquoise;
+}
+.nav-button:hover .drop-down-menu
+{
+    display: block;
+    float: left;
+    padding-right: 20px;
+}
 .home-banner-container button:hover
 {
     background-color: blue;
@@ -93,11 +116,19 @@
     
 }
 
+.middle-grid,.category
+{
+    grid-column: span 1 !important;
+    text-overflow: clip;
+}
+
 .middle-grid
 {
+    grid-column:1;
     margin-left: 150px;
     text-align:center;
     text-justify: inter-word;
+    text-overflow: clip;
 }
 
 .middle-grid #paragraph
@@ -107,11 +138,10 @@
 .middle-grid #changed-para
 {
     display: grid;
+    grid-column: 1;
 }
-.main-grid .category
-{
-   margin-left: 20vw;
-}
+
+
 .main-heading
 {
 
@@ -133,14 +163,13 @@ p
 .category
 {
     text-align: center;
-    max-width: 400px;
-    min-width: 300px;
+    width: 100%;
     display: grid;
-    row-gap: 30px;
-    grid-row: 2/3;
+    row-gap: 20px;
+    grid-row: 2;
+    grid-column: 1;
     margin-top: 40px;
     justify-content: center;
-    margin-left: 20px;
 }
 .prod-1
 {
@@ -226,8 +255,8 @@ p
     width:fit-content;
     overflow-wrap: unset;
     grid-row: 6;
-    grid-column: 1/4;
-    width: 100%;
+    grid-column: 1;
+    width: 100vw;
 }
 .first-user
 {
@@ -375,8 +404,9 @@ footer
 {
     background-color: rgb(39, 38, 38);
     display: grid;
-    grid-template-columns: max-content max-content max-content;
     column-gap: 25px;
+    width: 100%;
+    text-overflow: clip;
 }
 
 .foot-bar
@@ -421,6 +451,7 @@ footer
 {
     color:lightgrey;
     font-size: 12px;
+    overflow-wrap: break-word;
 }
 .newsletter input
 {
@@ -473,6 +504,7 @@ footer
     grid-row: 4;
     padding-bottom: 30px;
     margin-left: 10px;
+    overflow-wrap: break-word;
 }
 .copyright #heart,.colorib
 {
@@ -482,6 +514,8 @@ footer
 {
     font-size: 12px;
     color: lightgrey;
+    overflow-wrap: break-word;
+    grid-column: 1;
 }
 .button-1
 {
@@ -511,7 +545,7 @@ footer
     color: gray;
     align-self: center;
     justify-content: center;
-    min-width: 5vw;
+    width: 15vw;
     margin-left: 10px;
     background-color: black;
     min-height: 7vh;
@@ -576,7 +610,7 @@ footer
     background-color: rgb(34, 34, 34);
     min-height: 200px;
     width: 100%;
-    grid-column: 1/4;
+    grid-column: 1;
     position: relative;
     margin-top: 10px;
     row-gap: 50px;
@@ -644,15 +678,6 @@ footer
     z-index: 2;
 }
 
-.drop-down-menu
-{
-    display: none;
-}
-.hire-button:hover .drop-down-menu>*
-{
-    display: grid;
-    
-}
 
 @media only screen and (min-width:768px) {
     .drop-down-menu
@@ -706,7 +731,8 @@ footer
         position: sticky;
         display: flex;
         min-height: 15vh;
-        z-index: 1;
+        z-index: 2;
+        overflow:hidden;
     }
     .top-nav .nav-links #full-bar
     {
@@ -719,23 +745,28 @@ footer
     .top-nav .nav-links #full-bar #dropdown-content-blog
     {
         display: none;
-        position:unset;
         background-color: #f9f9f9;
         flex-flow: column;
         min-width: 160px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        margin-left: 250px;
-        height: initial;
+        margin-right: 100px;
+        height: 200px;
         list-style:none;
-        margin-top:20px;
-        padding-top: 40px;
+        padding-top:40px;
         z-index: 1;
+        grid-row: 1;
     }
-    /* #full-bar >#dropdown-content-blog
+    /* #full-bar #blog:hover #dropdown-content-blog
     {
         display: grid !important;
-        z-index: 1;
+        position: static;
+        z-index: -1;
     } */
+    .top-nav label:hover
+    {
+        color: turquoise;
+        cursor: pointer;
+    } 
     .nav-links #full-bar a
     {
         font-family: sans-serif;
@@ -806,7 +837,7 @@ footer
     }
     .middle-grid
     {
-        grid-column: 1/4;
+        grid-column: 1/span 3;
         margin-top: 50px;
         text-align:center;
         text-justify: inter-word;
@@ -1164,7 +1195,7 @@ footer
     {
         grid-row: 1;
         grid-column: 3;
-        margin-left: 100px;
+        margin-left: 50px;
         margin-top: 30px;
     }
     .insta-feed h3
@@ -1198,7 +1229,7 @@ footer
         grid-row: 2;
         grid-column: 3;
         text-align: center;
-        padding-left: 90px;
+        padding-left: 10px;
         padding-bottom:50px;
     }
     .foot-icons i
